# template_job_fit_assessment

./: .env.example  .gitignore  README.md  pyproject.toml
frontend/: .env.example  app.py
frontend/static/: style.css
frontend/templates/: index.html
src/template_job_fit_assessment/: main.py
src/template_job_fit_assessment/events/: listener.py
